[UHMEP-2477] add styling to display button better

--- a/reuse/code/components/select-prescription-type/select-prescription-type.component.html
+++ b/reuse/code/components/select-prescription-type/select-prescription-type.component.html
@@ -16,7 +16,7 @@
           [matAutocomplete]="catAuto"
         >
         @if (control?.value) {
-          <button matSuffix mat-icon-button (click)="control?.setValue('')">
+          <button matSuffix mat-icon-button (click)="control?.setValue('')" class="button-close-icon">
             <mat-icon>close</mat-icon>
           </button>
         }
@@ -50,7 +50,7 @@
             [matAutocomplete]="typeAuto"
           >
           @if (control?.value) {
-            <button matSuffix mat-icon-button (click)="control?.setValue('')">
+            <button matSuffix mat-icon-button (click)="control?.setValue('')"  class="button-close-icon">
               <mat-icon>close</mat-icon>
             </button>
           }
@@ -91,7 +91,7 @@
             [matAutocomplete]="typeAuto"
           >
           @if (control?.value) {
-            <button matSuffix mat-icon-button (click)="control?.setValue('')">
+            <button matSuffix mat-icon-button (click)="control?.setValue('')"  class="button-close-icon">
               <mat-icon>close</mat-icon>
             </button>
           }
