--- a/reuse/code/components/select-prescription-type/select-prescription-type.component.scss
+++ b/reuse/code/components/select-prescription-type/select-prescription-type.component.scss
@@ -7,3 +7,7 @@ label {
     color: var(--mdc-outlined-text-field-error-outline-color, --mh-label-field-error-color);
   }
 }
+
+.button-close-icon {
+  margin-right: 4px;
+}
