--- a/reuse/code/evf/components/occurrence-timing/detail/occurrence-timing-detail.component.html
+++ b/reuse/code/evf/components/occurrence-timing/detail/occurrence-timing-detail.component.html
@@ -7,6 +7,6 @@
   }
 
   <div class="value">
-    {{ elementControl.value | occurrenceDuration }}
+    {{ elementControl.value | occurrenceTiming }}
   </div>
 </evf-form-detail-layout>
