--- a/wc-prescription-create/src/components/create-prescription-model/create-prescription-model.component.html
+++ b/wc-prescription-create/src/components/create-prescription-model/create-prescription-model.component.html
@@ -39,6 +39,8 @@
                     [formControl]="titleControl"
                     matInput
                     data-cy="prescription-modal-dialog-input"
+                    minlength="1"
+                    maxlength="100"
                   />
                   @if (titleControl.hasError('required')) {
                     <mat-error>{{ 'common.mandatory' | translate }}</mat-error>
