--- a/wc-prescription-create/src/components/create-prescription-model/create-prescription-model.component.html
+++ b/wc-prescription-create/src/components/create-prescription-model/create-prescription-model.component.html
@@ -59,7 +59,7 @@
                 [readonly]="prescriptionForm.status === LoadingStatus.SUCCESS"
                 [submitted]="!!prescriptionForm.submitted"
                 [template]="getTemplateData(formTemplateState)!"
-                (changeElementGroup)="setElementGroup(prescriptionForm, $any($event)?.detail)"
+                (changeElementGroup)="setElementGroup(prescriptionForm, $any($event))"
                 [status]="false"
               ></evf-form>
 
