--- a/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
+++ b/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
@@ -15,7 +15,7 @@
   }
 
   <mat-accordion [hideToggle]="createPrescriptionForms.length === 1" togglePosition="after">
-    @for (prescriptionForm of createPrescriptionForms; track trackByFn($index, prescriptionForm); let last = $last) {
+    @for (prescriptionForm of createPrescriptionForms; track trackByFn(prescriptionForm); let last = $last) {
       <mat-expansion-panel
         [expanded]="last"
       >
