--- a/wc-prescription-details/src/components/evf-details/evf-form-details.component.html
+++ b/wc-prescription-details/src/components/evf-details/evf-form-details.component.html
@@ -2,10 +2,7 @@
   <evf-form-detail-group
     [elementControls]="elementGroup.childElementControls"
     [options]="{showDividers: false, detailLayout: detailLayout}"
-    [metadata]="{
-    pssActive: status,
-    isProfessional : isProfessional
-    }"
+    [metadata]="metaData"
   ></evf-form-detail-group>
 }
 
