--- a/wc-prescription-details/src/components/prescription-details-main/prescription-details-main.component.html
+++ b/wc-prescription-details/src/components/prescription-details-main/prescription-details-main.component.html
@@ -12,6 +12,7 @@
               [responses]="decryptedResponses().data!"
               [status]="status()"
               [isProfessional]="isProfessional$()"
+              [intent]="prescription?.intent"
       ></evf-form-details>
     </div>
   }
