--- a/wc-prescription-list/src/components/models/prescription-models-table/prescription-models-table.component.html
+++ b/wc-prescription-list/src/components/models/prescription-models-table/prescription-models-table.component.html
@@ -43,6 +43,23 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="tableStatus">
+    <td mat-footer-cell *matFooterCellDef colspan="6">
+      @if(prescriptionModels.length > 0) {
+        <span
+          class="sr-only"
+          role="status"
+          aria-live="polite"
+        >
+      {{ 'prescription.model.tableHasRecords' | translate:{ total: prescriptionModels.length } }}
+    </span>
+      }
+      @if(prescriptionModels.length === 0) {
+        <span>{{'prescription.model.noModels' | translate}}</span>
+      }
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr [class.inactive]="row.status === RequestStatus.Done || row.status === RequestStatus.Cancelled || row.status === RequestStatus.Expired"
       [tabindex]="0"
@@ -51,13 +68,8 @@
       (click)="openPrescriptionModel.emit(row)"
       mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-  @if (!loading){
-    <tr [class]="prescriptionModels.length === 0 ? 'no-models' : 'no-data'" class="mat-mdc-row" *matNoDataRow >
-      <td class="mat-mdc-cell" [attr.colspan]="displayedColumns.length">
-        <span>{{'prescription.model.noModels' | translate}}</span>
-      </td>
-    </tr>
-  }
+  <tr [class]="prescriptionModels.length === 0 ? 'no-models' : 'no-data'" mat-footer-row
+      *matFooterRowDef="['tableStatus']"></tr>
 </table>
 }
   @if (error) {
