--- a/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
+++ b/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.html
@@ -72,18 +72,23 @@
 
         @if(prescriptionForm.formTemplateState$(); as formTemplateState) {
           <ng-container>
-            <app-overlay-spinner *ifStatusLoading="formTemplateState" mode="inline"></app-overlay-spinner>
-            <div *ifStatusError="formTemplateState">Failed to load prescription form template.</div>
-            <evf-form
-              *ifStatusSuccess="formTemplateState"
-              [lang]="lang"
-              [readonly]="prescriptionForm.status === LoadingStatus.SUCCESS"
-              [submitted]="!!prescriptionForm.submitted"
-              [template]="formTemplateState.data!"
-              (changeElementGroup)="setElementGroup(prescriptionForm, $any($event))"
-              [status]="status"
-              [patient]="patient"
-            ></evf-form>
+            @if(formTemplateState.status === LoadingStatus.LOADING || formTemplateState.status === LoadingStatus.UPDATING){
+              <app-overlay-spinner mode="inline"></app-overlay-spinner>
+            }
+            @if(formTemplateState.status === LoadingStatus.ERROR){
+              <div>Failed to load prescription form template.</div>
+            }
+            @if(formTemplateState.status === LoadingStatus.SUCCESS){
+              <evf-form
+                [lang]="lang"
+                [readonly]="prescriptionForm.status === LoadingStatus.SUCCESS"
+                [submitted]="!!prescriptionForm.submitted"
+                [template]="formTemplateState.data!"
+                (changeElementGroup)="setElementGroup(prescriptionForm, $any($event))"
+                [status]="status"
+                [patient]="patient"
+              ></evf-form>
+            }
 
             @if(isPrescriptionValue){
               <button
