LABEL-ISSUE: Fix wrong key used for performerTask.statuses

--- a/wc-prescription-details/src/components/prescription-details-secondary/prescription-details-caregiver-list/prescription-details-caregiver-list.component.html
+++ b/wc-prescription-details/src/components/prescription-details-secondary/prescription-details-caregiver-list/prescription-details-caregiver-list.component.html
@@ -37,7 +37,7 @@
             @if(getReadableStatus(performerTask.status)) {
               <div class="performer_task_status">
                 <mat-chip [disableRipple]="true"
-                          [class]="getStatusColor(performerTask.status!)">{{ 'prescription.performerTaskStatus.' + getReadableStatus(performerTask.status) | translate }}
+                          [class]="getStatusColor(performerTask.status!)">{{ 'performerTask.statuses.' + performerTask.status | translate }}
                 </mat-chip>
               </div>
             }
